# Econometria-y-Estad-stica-Espacial

./: README.md  Tarea2.html  Tarea2.ipynb  introduccion-Python.html  introduccion-Python.ipynb  introduccion-R.html  introduccion-R.ipynb  pyproject.toml
