[project]
name = "econometria-y-estad-stica-espacial"
version = "0.1.0"
description = ""
authors = [
    {name = "LuisGorozpe",email = "luis.ascencio@cimat.mx"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
